[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Options.gd" type="Script" id=2]
[ext_resource path="res://scenes/Options_InputPrompt.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.752941 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Audio" type="Panel" parent="."]
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0

[node name="Title" type="Label" parent="Audio"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "VOLUME"
align = 1

[node name="Volumes" type="VBoxContainer" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 16.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 8
alignment = 1

[node name="Master" type="HBoxContainer" parent="Audio/Volumes"]
margin_right = 232.0
margin_bottom = 19.0
alignment = 2

[node name="Label" type="Label" parent="Audio/Volumes/Master"]
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "VOL_MASTER"

[node name="Slider" type="HSlider" parent="Audio/Volumes/Master"]
margin_left = 104.0
margin_right = 232.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
step = 0.1

[node name="Sounds" type="HBoxContainer" parent="Audio/Volumes"]
margin_top = 27.0
margin_right = 232.0
margin_bottom = 46.0
alignment = 2

[node name="Label" type="Label" parent="Audio/Volumes/Sounds"]
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "VOL_SOUNDS"

[node name="Slider" type="HSlider" parent="Audio/Volumes/Sounds"]
margin_left = 104.0
margin_right = 232.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
step = 0.1

[node name="Music" type="HBoxContainer" parent="Audio/Volumes"]
margin_top = 54.0
margin_right = 232.0
margin_bottom = 73.0
alignment = 2

[node name="Label" type="Label" parent="Audio/Volumes/Music"]
margin_left = 10.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "VOL_MUSIC"

[node name="Slider" type="HSlider" parent="Audio/Volumes/Music"]
margin_left = 104.0
margin_right = 232.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
step = 0.1

[node name="Gameplay" type="Panel" parent="."]
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="Title" type="Label" parent="Gameplay"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "GAMEPLAY"
align = 1

[node name="GameplayOptions" type="VBoxContainer" parent="Gameplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 16.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 8
alignment = 1

[node name="Language" type="HBoxContainer" parent="Gameplay/GameplayOptions"]
margin_right = 242.0
margin_bottom = 20.0
alignment = 2

[node name="Label" type="Label" parent="Gameplay/GameplayOptions/Language"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "LANGUAGE"
align = 2

[node name="Options" type="OptionButton" parent="Gameplay/GameplayOptions/Language"]
margin_left = 114.0
margin_right = 242.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 128, 0 )
text = "English (UK)"
items = [ "English (UK)", null, false, 0, null, "English (US)", null, false, 1, null, "Espa√±ol", null, false, 2, null ]
selected = 0

[node name="Screenshake" type="HBoxContainer" parent="Gameplay/GameplayOptions"]
margin_top = 28.0
margin_right = 242.0
margin_bottom = 47.0
alignment = 2

[node name="Label" type="Label" parent="Gameplay/GameplayOptions/Screenshake"]
margin_right = 110.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
text = "SCREENSHAKE"
align = 2

[node name="Slider" type="HSlider" parent="Gameplay/GameplayOptions/Screenshake"]
margin_left = 114.0
margin_right = 242.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
max_value = 2.0
step = 0.01
value = 1.0

[node name="Keybinding" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="Title" type="Label" parent="Keybinding"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "INPUT_MAP"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Keybinding"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 64.0
grow_horizontal = 2
scroll_horizontal_enabled = false

[node name="KeybindingOptions" type="VBoxContainer" parent="Keybinding/ScrollContainer"]
margin_right = 308.0
margin_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 8
alignment = 1

[node name="move_up" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_right = 308.0
margin_bottom = 20.0
custom_constants/separation = 12
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/move_up"]
margin_left = 138.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "MOVE_UP"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/move_up"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="move_left" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 28.0
margin_right = 308.0
margin_bottom = 48.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/move_left"]
margin_left = 128.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "MOVE_LEFT"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/move_left"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="move_down" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 56.0
margin_right = 308.0
margin_bottom = 76.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/move_down"]
margin_left = 112.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "MOVE_DOWN"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/move_down"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="move_right" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 84.0
margin_right = 308.0
margin_bottom = 104.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/move_right"]
margin_left = 116.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "MOVE_RIGHT"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/move_right"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="move_brake" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 112.0
margin_right = 308.0
margin_bottom = 132.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/move_brake"]
margin_left = 115.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "MOVE_BRAKE"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/move_brake"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="toggle_silent_running" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 140.0
margin_right = 308.0
margin_bottom = 160.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/toggle_silent_running"]
margin_left = 30.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "TOGGLE_SILENT_RUNNING"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/toggle_silent_running"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="active_ping" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 168.0
margin_right = 308.0
margin_bottom = 188.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/active_ping"]
margin_left = 134.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "FIRE_PING"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/active_ping"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="fire_torpedo" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 196.0
margin_right = 308.0
margin_bottom = 216.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/fire_torpedo"]
margin_left = 105.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "FIRE_TORPEDO"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/fire_torpedo"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="use_secondary" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 224.0
margin_right = 308.0
margin_bottom = 244.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/use_secondary"]
margin_left = 56.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "USE_SECONDARY_ITEM"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/use_secondary"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="cycle_secondary_forward" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 252.0
margin_right = 308.0
margin_bottom = 272.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/cycle_secondary_forward"]
margin_left = 8.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "CYCLE_SECONDARY_FORWARD"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/cycle_secondary_forward"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="cycle_secondary_backward" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 280.0
margin_right = 308.0
margin_bottom = 300.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/cycle_secondary_backward"]
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "CYCLE_SECONDARY_BACKWARD"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/cycle_secondary_backward"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="open_menu" type="HBoxContainer" parent="Keybinding/ScrollContainer/KeybindingOptions"]
margin_top = 308.0
margin_right = 308.0
margin_bottom = 328.0
custom_constants/separation = 12
alignment = 2

[node name="Label" type="Label" parent="Keybinding/ScrollContainer/KeybindingOptions/open_menu"]
margin_left = 119.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "OPEN_MENU"

[node name="Button" type="Button" parent="Keybinding/ScrollContainer/KeybindingOptions/open_menu"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 0 )

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -40.0
margin_right = 42.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 1 )
text = "BACK"

[node name="InputPrompt" type="PopupPanel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
popup_exclusive = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="InputPrompt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -508.0
margin_top = -296.0
margin_right = 508.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 2 )
text = "PROVIDE_ANY_INPUT"
align = 1
valign = 1

[connection signal="value_changed" from="Audio/Volumes/Master/Slider" to="." method="_on_MasterVolume_changed"]
[connection signal="value_changed" from="Audio/Volumes/Sounds/Slider" to="." method="_on_SoundVolume_changed"]
[connection signal="value_changed" from="Audio/Volumes/Music/Slider" to="." method="_on_MusicVolume_changed"]
[connection signal="item_selected" from="Gameplay/GameplayOptions/Language/Options" to="." method="_on_Language_selected"]
[connection signal="value_changed" from="Gameplay/GameplayOptions/Screenshake/Slider" to="." method="_on_ScreenshakeStrength_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back"]
